# chameleon

./: index.html
assets/: index-0osgvQe1.css  index-BAuoX76X.css  index-BUVJvBeI.js  index-BVO2gyGx.css  index-Brlp3-9r.js  index-C93HrkF3.js  index-CEgaeHcC.css  index-CNIYPPv5.js  index-CTU5OcZt.js  index-Cc6Kh0ZX.css  index-D1CJdvOE.js  index-D4WLt57W.css  index-Dl3MaJe0.js  index-cXB2TNMy.js  index-tTFMfkYS.js
chameleon_backend/: .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
chameleon_backend/src/chameleon_backend/routes/: downloadChameleon.py
chameleon_frontend/: bun.lockb  index.html  package.json  vite.config.ts
chameleon_frontend/src/: App.css  App.tsx  vite-env.d.ts
chameleon_frontend/src/components/: DownloadForm.tsx  about.tsx  access-resources.tsx  chameleon-dataset.tsx  contact-form.tsx  dataset-distribution.tsx  dataset-summary.tsx  example-reports.tsx  footer.tsx  generation-process.tsx  hero.tsx  myNavbar.tsx  pathology-table.tsx  resources.tsx  team.tsx  teamMember.tsx
chameleon_frontend/src/data/: pathology-data.ts  team-members.ts
frontend/src/: App.jsx
