[project]
name = "chameleon-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]


[tool.poetry.dependencies]
python = "3.13.*"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["standard"] }


[tool.poetry]
packages = [{include = "chameleon_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
